--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
 				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html">Faculty of Medicine and Life Sciences, University of Tampere</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
+				<p><b><a href="https://pyykkojuha.github.io>GitHub</a></b></p>
 			</div>
 		</div>
 	</body>
