--- a/index.html
+++ b/index.html
@@ -168,9 +168,11 @@
 			</header>
 			<div id="contact">
 				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
-				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html">Faculty of Medicine and Life Sciences, University of Tampere</a></b></p>
+				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html">Faculty of Medicine and Life Sciences, University of Tampere, Finland</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
+				<p>...</p>
+				<p><a href="https://www.sync.com/?_sync_refer=f7835d0">Sync.com +1gb referral</a></p>
 			</div>
 		</div>
 	</body>
