--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
 				<p>...</p>
-				<p><a href="https://www.sync.com/?_sync_refer=f7835d0">Sync.com +1gb referral</a></p>
+				<p><a href="https://www.sync.com/?_sync_refer=f7835d0">Sync.com +1 GB referral</a></p>
 			</div>
 		</div>
 	</body>
