--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Juha Pyykkö * statistics</title>
+		<title>Juha Pyykkö</title>
         <link rel="icon" type="image/x-icon" href="jp.ico">
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-		<meta name="description" content="Juha Pyykko" />
-		<meta name="keywords" content="Juha Pyykko" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Juha Pyykkö" />
+		<meta name="keywords" content="Juha Pyykkö" />
+                
+<!-- FONT -->
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
+
 <!-- CSS -->
 	<style>
 	/* MAIN */
@@ -16,7 +20,7 @@
 		}
 
 	body {
-		background:white;
+		background:black;
 		color:black;
 		}
 
@@ -83,67 +87,48 @@
 		}
 
 	/* a */
-		header a:link    {color:black; text-decoration:none;}
-		header a:visited {color:black; text-decoration:none;}
-		header a:active  {color:#A32900; text-decoration:none;}
-		header a:hover   {color:#A32900; text-decoration:none;}
-		#contact a:link    {color:#F5F5F5; text-decoration:none;}
-		#contact a:visited {color:#F5F5F5; text-decoration:none;}
+		header a:link    {color:ghostwhite; text-decoration:none;}
+		header a:visited {color:ghostwhite; text-decoration:none;}
+		header a:active  {color:#FF4D4D; text-decoration:none;}
+		header a:hover   {color:#FF4D4D; text-decoration:none;}
+		#contact a:link    {color:ghostwhite; text-decoration:none;}
+		#contact a:visited {color:ghostwhite; text-decoration:none;}
 		#contact a:active  {color:#FF4D4D; text-decoration:none;}
 		#contact a:hover   {color:#FF4D4D; text-decoration:none;}
 
 	/* HEADER */
 	header h1 {
 		float:left;
-		font-size:3em;
-		color:black;
-		font-family:Helvetica,sans-serif;
+		font-size:2.5em;
+		color:ghostwhite;
+		font-family: 'Lato', 'Arial';
 		letter-spacing:8px;
 		margin-bottom:10px;
 		margin-top:10px;
 		text-transform:uppercase;
-		background:white;
+		background:black;
 		width:100%;
 		text-align:left;
 		padding-left: 4px;
 		padding-top: 4px;
 		}
 
-
-	/* NAV */
-	header nav {
-		font-size:1em;
-		float:right;
-		margin-top:50px;
-		margin-left:0px;
-		background:#1A0000;
-		}
-
-	header nav li {
-		display:inline;
-		margin-left:15px;
-		font-weight:bold;
-		text-transform:uppercase;
-		font-family:Helvtica,sans-serif;
-		}
-
-
-
-	/* FOOTER */
+/* MAIN */
 	#contact {
 		margin-left:0px;
-		background:#1A0000;
+		background:black;
 		clear:both;
 		text-align:left;
 		width:100%;
+		font-family: 'Lato', 'Arial';
 		}
 
 	#contact p {
 		padding:8px 0;
 		margin:0;
-		color:#F5F5F5;
+		color:ghostwhite;
 		font-size:14px;
-		font-family:helvetica, sans-serif;
+		font-family: 'Lato', 'Arial';
 		letter-spacing:4px;
 		padding-left: 4px;
 		}
@@ -164,16 +149,19 @@
 		<div id="wrapper">
 <!-- HEADER -->
 			<header>
-				<h1>Juha Pyykkö</h1>
+                <h1><b>Juha <br>Pyykkö</b></h1>
 			</header>
+<!-- CONTACT -->
 			<div id="contact">
-				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
-				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html">Faculty of Medicine and Life Sciences, University of Tampere, Finland</a></b></p>
-				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
+				<p><a href="mailto:pyykkojuha@tuta.io?Subject=Hey" target="_top">pyykkojuha@tuta.io</a></p>
+				<p style="color:skyblue;">Tampere, Finland</p>
+                <img src="j.png" alt="J." width="222">
+				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html"> University of Tampere</a></b></p>
+				<p><b><a href="http://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
-				<p>...</p>
-				<p><a href="https://www.sync.com/?_sync_refer=f7835d0">Sync.com +1 GB referral</a></p>
-				<p><a href="https://db.tt/NMMn6mad0M">Dropbox +500 MB referral</a></p>
+				<p><b><a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
+				<p><b><a href="http://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
+				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCID iD</a></b></p>
 			</div>
 		</div>
 	</body>
