--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
 				<p><b><a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="http://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
-				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCID iD</a></b></p>
+				<p><b><a href="https://orcid.org/0000-0001-6120-5323" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6120-5323</a></b></p>
 			</div>
 		</div>
 	</body>
