--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="Juha Pyykkö" />
                 
 <!-- FONT -->
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 
 <!-- CSS -->
 	<style>
