--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 				<p><a href="mailto:pyykkojuha@tuta.io?Subject=Hey" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
                 <img src="j.png" alt="J." width="222">
-				<p><b><a href="http://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html"> University of Tampere</a></b></p>
-				<p><b><a href="http://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
+				<p><b><a href="https://www.uta.fi/med/tacc-gh/personnel/staff/pyykko_j.html"> University of Tampere</a></b></p>
+				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
-				<p><b><a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
-				<p><b><a href="http://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
+				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
+				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCID iD</a></b></p>
 			</div>
 		</div>
