--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
+				<p><b><a href="https://scholar.google.fi/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
+				<p><b><a href="https://uta-fi.academia.edu/pyykkojuha">Academia.edu</a></b></p>
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCID iD</a></b></p>
 			</div>
 		</div>
