--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			</header>
 <!-- CONTACT -->
 			<div id="contact">
-				<p><a href="mailto:pyykkojuha@tuta.io?Subject=Hey" target="_top">pyykkojuha@tuta.io</a></p>
+				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
                 <img src="j.png" alt="J." width="222">
 				<p><b><a href="https://research.uta.fi/tacc-gh/juha-pyykko/">University of Tampere</a></b></p>
