--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
                 <img src="j.png" alt="J." width="222">
-				<p><b><a href="https://research.uta.fi/tacc-gh/juha-pyykko/">University of Tampere</a></b></p>
+				<p><b><a href="https://research.tuni.fi/tacc-gh/juha-pyykko">Tampere University</a></b></p>
 				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
 				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
