--- a/index.html
+++ b/index.html
@@ -18,27 +18,22 @@
 		overflow-y:
 		scroll;
 		}
-
 	body {
 		background:black;
 		color:black;
 		}
-
 	p {
 		margin:0 0 10px;
 		line-height:1.4em;
 		}
-
 	ul {
 		list-style:none;
 		margin:0;
 		}
-
 	ul li {
 		margin:0;
 		padding:0;
 		}
-
 	aside, contact, header, nav, section {
 	    display:block;
 		}
@@ -58,29 +53,24 @@
 		*margin-right: 5%;
 		float: left;
 		}
-
 	#main h1 {
 		font-size:2em;
 		letter-spacing:5px;
 		font-family:Times,serif;
 		}
-
 	#main p {
 		font-size:1em;
 		letter-spacing:1px;
 		font-family:Times,serif;
 		}
-
 	aside {
 		width: 35%;
 		float: right;
 		}
-
 	aside h1 {
 		font-size: 2em;
 		letter-spacing: 4px;
 		}
-
 	aside p {
 		font-size: 1em;
 		letter-spacing: 2px;
@@ -122,7 +112,6 @@
 		width:100%;
 		font-family: 'Lato', 'Arial';
 		}
-
 	#contact p {
 		padding:8px 0;
 		margin:0;
@@ -142,7 +131,6 @@
 			width:100%;
 			}
 		}
-
 	</style>
 	</head>
 	<body>
@@ -155,14 +143,13 @@
 			<div id="contact">
 				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
-                <img src="j.png" alt="J." width="222">
+                		<img src="j.png" alt="J." width="222">
 				<p><b><a href="https://research.tuni.fi/tacc-gh/juha-pyykko">Tampere University</a></b></p>
-				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
-				<p><b><a href="https://github.com/pyykkojuha">GitHub</a></b></p>
+				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
-				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
-				<p><b><a href="https://scholar.google.fi/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
+				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
+				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
 			</div>
 		</div>
 	</body>
