--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
-				<p><b><a href="https://linkedin.com/in/juha-pyykkö-191b8598">LinkedIn</a></b></p>
+				<p><b><a href="https://linkedin.com/in/juha-pyykko">LinkedIn</a></b></p>
 			</div>
 		</div>
 	</body>
