--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 		<img src="j.png" alt="J." width="222">
 				<p><b><a href="https://research.tuni.fi/tacc-gh/juha-pyykko">Tampere University</a></b></p>
 				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
-				<p><b><a href="https://www.orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
+				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
 				<p><b><a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677">Scopus</a></b></p>
