--- a/index.html
+++ b/index.html
@@ -144,14 +144,15 @@
 				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
                 		<img src="j.png" alt="J." width="222">
-				<p><b><a href="https://research.tuni.fi/tacc-gh/juha-pyykko">Tampere University</a></b></p>
-				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
+				<p><b><a href="https://www.tuni.fi/fi/juha-pyykko">Tampere University</a></b></p>
 				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
+				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
 				<p><b><a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677">Scopus</a></b></p>
-				<p><b><a href="https://www.linkedin.com/in/juha-pyykko">LinkedIn</a></b></p>
-				<p><b><a href="https://www.twitter.com/juha_pyykko">Twitter</a></b></p>
+				<p><b><a href="https://www.linkedin.com/in/juha-pyykko"><img src="LI-In-Bug.png" height=“50" alt=“LinkedIn”></a></b></p>
+				<p><b><a href="https://www.twitter.com/juha_pyykko"><img src="Twitter_Logo_Blue.png" height=“50" alt=“Twitter”>
+</a></b></p>
 			</div>
 		</div>
 	</body>
