--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
 				<p><b><a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677">Scopus</a></b></p>
-				<p><b><a href="https://www.linkedin.com/in/juha-pyykko"><img src="LI-In-Bug.png" height=“50" alt=“LinkedIn”></a></b></p>
-				<p><b><a href="https://www.twitter.com/juha_pyykko"><img src="Twitter_Logo_Blue.png" height=“50" alt=“Twitter”>
-</a></b></p>
+				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="40" ></a></p>
+				<p><a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" height="40" alt="Twitter"></a></p>
+				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40" ></a></p>
 			</div>
 		</div>
 	</body>
