--- a/index.html
+++ b/index.html
@@ -145,14 +145,13 @@
 				<p style="color:skyblue;">Tampere, Finland</p>
                 		<img src="j.png" alt="J." width="222">
 				<p><b><a href="https://www.tuni.fi/fi/juha-pyykko">Tampere University</a></b></p>
-				<p><b><a href="https://orcid.org/0000-0001-6120-5323">ORCiD</a></b></p>
 				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
 				<p><b><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Pyykkö%20J[Author]">PubMed</a></b></p>
 				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
 				<p><b><a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677">Scopus</a></b></p>
-				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="40" ></a></p>
-				<p><a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" height="40" alt="Twitter"></a></p>
-				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40" ></a></p>
+				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="40" ></a>
+				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" height="40" alt="Twitter"></a>
+				   <a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40" ></a></p>
 			</div>
 		</div>
 	</body>
