--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
 		letter-spacing:4px;
 		padding-left: 4px;
 		}
+	#contact p a img {
+		margin: 0 10px 0 0;
+		}
 
 	/* Media Queries */
 	@media screen and (max-width:480px) {
