--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Juha Pyykkö</title>
-        <link rel="icon" type="image/x-icon" href="jp.ico">
+        <link rel="icon" type="image/x-icon" href="j.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Juha Pyykkö" />
 		<meta name="keywords" content="Juha Pyykkö" />
@@ -89,7 +89,7 @@
 	/* HEADER */
 	header h1 {
 		float:left;
-		font-size:2.5em;
+		font-size:2.4em;
 		color:ghostwhite;
 		font-family: 'Lato', 'Arial';
 		letter-spacing:8px;
@@ -122,7 +122,7 @@
 		padding-left: 4px;
 		}
 	#contact p a img {
-		margin: 0 10px 0 0;
+		margin: 0 15px 0 0;
 		}
 
 	/* Media Queries */
@@ -146,15 +146,15 @@
 			<div id="contact">
 				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
-                		<img src="j.png" alt="J." width="222">
-				<p><b><a href="https://www.tuni.fi/fi/juha-pyykko">Tampere University</a></b></p>
-				<p><b><a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ">Google Scholar</a></b></p>
-				<p><b><a href="https://www.researchgate.net/profile/Juha_Pyykkoe">ResearchGate</a></b></p>
-				<p><b><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date">PubMed</a></b></p>
-				<p><b><a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677">Scopus</a></b></p>
-				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="40" ></a>
+                		<img src="j.png" alt="J." width="190">
+				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" height="42"></a></b></p>
+				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="45"></a>
+				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar<" height="45"></a>
+				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate<" height="45"></a></p>
+				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed<" height="40"></a>
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" height="40" alt="Twitter"></a>
-				   <a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40" ></a></p>
+				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40"></a>
+				<a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus<" height="35"></a></p>
 			</div>
 		</div>
 	</body>
