--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
 				<p><a href="mailto:pyykkojuha@tuta.io" target="_top">pyykkojuha@tuta.io</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
                 		<img src="j.png" alt="J." width="190">
-				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" height="42"></a></b></p>
+				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" height="42"></a></p>
 				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="45"></a>
-				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar<" height="45"></a>
-				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate<" height="45"></a></p>
-				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed<" height="40"></a>
-				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" height="40" alt="Twitter"></a>
+				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar" height="45"></a>
+				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" height="45"></a></p>
+				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" height="40"></a>
+				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" height="40" ></a>
 				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40"></a>
-				<a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus<" height="35"></a></p>
+				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" height="35"></a></p>
 			</div>
 		</div>
 	</body>
