--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
 			<div id="contact">
 				<p><a href="mailto:juha.pyykko@tuni.fi" target="_top">juha.pyykko@tuni.fi</a></p>
 				<p style="color:skyblue;">Tampere, Finland</p>
-                		<img src="j.png" alt="J." width="190">
-				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" height="43"></a></p>
-				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" height="45"></a>
-				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar" height="45"></a>
-				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" height="45"></a></p>
-				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" height="40"></a>
-				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" height="40" ></a>
-				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" height="40"></a>
-				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" height="35"></a></p>
+                		<img src="j.png" alt="J" width="190">
+				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
+				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" title="ORCiD" height="45"></a>
+				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar" title="Google Scholar" height="45"></a>
+				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" title="ResearchGate" height="45"></a></p>
+				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
+				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
+				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" title="LinkedIn" height="40"></a>
+				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
 			</div>
 		</div>
 	</body>
