--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 		}
 
 	/* a */
-		header a:link    {color:ghostwhite; text-decoration:none;}
-		header a:visited {color:ghostwhite; text-decoration:none;}
+		header a:link    {color:skyblue; text-decoration:none;}
+		header a:visited {color:skyblue; text-decoration:none;}
 		header a:active  {color:#FF4D4D; text-decoration:none;}
 		header a:hover   {color:#FF4D4D; text-decoration:none;}
-		#contact a:link    {color:ghostwhite; text-decoration:none;}
-		#contact a:visited {color:ghostwhite; text-decoration:none;}
+		#contact a:link    {color:skyblue; text-decoration:none;}
+		#contact a:visited {color:skyblue; text-decoration:none;}
 		#contact a:active  {color:#FF4D4D; text-decoration:none;}
 		#contact a:hover   {color:#FF4D4D; text-decoration:none;}
 
@@ -145,7 +145,6 @@
 <!-- CONTACT -->
 			<div id="contact">
 				<p><a href="mailto:juha.pyykko@tuni.fi" target="_top">juha.pyykko@tuni.fi</a></p>
-				<p style="color:skyblue;">Tampere, Finland</p>
                 		<img src="j.png" alt="J" width="190">
 				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
 				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" title="ORCiD" height="45"></a>
