--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
 				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" title="LinkedIn" height="40"></a>
 				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
+				<p><a href="https://linktr.ee/pyykkojuha"><img src="linktree.png" alt="linktree" title="linktree" height="40"></a></p>
 			</div>
 		</div>
 	</body>
