--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
 				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
-				<p style="font-size:1.6vw"><a href="https://linktr.ee/pyykkojuha"><img src="linktree.png" alt="Linktree" title="Linktree" height="40"></a>
+				<p style="font-size:24px"><a href="https://linktr.ee/pyykkojuha"><img src="linktree.png" alt="Linktree" title="Linktree" height="40"></a>
 				   <a href="https://github.com/pyykkojuha"><img src="github.png" alt="GitHub" title="GitHub" height="40"></a> 
 				   <a href="cv.html">CV</a></p>
 			</div>
