--- a/cv.html
+++ b/cv.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-		<title>Juha Pyykkö</title>
-        <link rel="icon" type="image/x-icon" href="https://pyykkojuha.github.io/j.ico">
+	<title>Juha Pyykkö</title>
+        <link rel="icon" type="image/x-icon" href="j.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Juha Pyykkö">
-		<meta name="keywords" content="Juha Pyykkö">
+	<meta name="keywords" content="Juha Pyykkö">
                 
 <!-- FONT -->
-    <link rel="stylesheet" type="text/css" href="./Juha Pyykkö_files/css">
+    <link rel="stylesheet" type="text/css" href="css">
 
 <!-- CSS -->
 	<style>
@@ -145,7 +145,7 @@
 			<div id="contact">
 				<p>Ph.D. Student in Global Health</p>
 				<p><a href="http://urn.fi/URN:NBN:fi:uta-201408202052">M.Sc. in Statistics</a></p>
-				<p>Career in Tampere University, Finland</p>
+				<p>Working at Tampere University, Faculty of Medicine and Health Technology, Tampere, Finland</p>
 			</div>
 		</div>
 </body></html>
