--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="Juha Pyykkö">
                 
 <!-- FONT -->
-    <link rel="stylesheet" type="text/css" href="css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
 
 <!-- CSS -->
 	<style>
