--- a/cv.html
+++ b/cv.html
@@ -101,6 +101,21 @@
 		padding-left: 4px;
 		padding-top: 4px;
 		}
+	header h2 {
+		float:left;
+		font-size:1.8em;
+		color:ghostwhite;
+		font-family: 'Lato', 'Arial';
+		letter-spacing:4px;
+		margin-bottom:10px;
+		margin-top:0px;
+		text-transform:uppercase;
+		background:black;
+		width:100%;
+		text-align:left;
+		padding-left: 4px;
+		padding-top: 4px;
+		}
 
 /* MAIN */
 	#contact {
@@ -140,6 +155,7 @@
 <!-- HEADER -->
 			<header>
                 <h1><b>Juha <br>Pyykkö</b></h1>
+		<h2>CV</h2>
 			</header>
 <!-- CONTACT -->
 			<div id="contact">
