--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" title="ResearchGate" height="45"></a></p>
 				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" title="LinkedIn" height="40"></a>
 				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
-				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Pyykkö+J%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
+				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term="Pyykkö+J"%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
 				<p style="font-size:26px"><a href="https://linktr.ee/pyykkojuha"><img src="linktree.png" alt="Linktree" title="Linktree" height="40"></a>
 				   <a href="https://github.com/pyykkojuha"><img src="github.png" alt="GitHub" title="GitHub" height="40"></a> 
