--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-	<title>Juha Pyykkö</title>
+	<title>Juha Pyykkö | CV</title>
         <link rel="icon" type="image/x-icon" href="j.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Juha Pyykkö">
