--- a/cv.html
+++ b/cv.html
@@ -159,9 +159,10 @@
 			</header>
 <!-- CONTACT -->
 			<div id="contact">
-				<p>Ph.D. Student in Global Health</p>
-				<p><a href="http://urn.fi/URN:NBN:fi:uta-201408202052">M.Sc. in Statistics</a></p>
-				<p>Working at Tampere University, Faculty of Medicine and Health Technology, Tampere, Finland</p>
+				<p>Ph.D. Student in Global Health.</p>
+				<p><a href="http://urn.fi/URN:NBN:fi:uta-201408202052">M.Sc. in Statistics.</a></p>
+				<p>Working at Tampere University, Faculty of Medicine and Health Technology, Tampere, Finland.</p>
+				<p>Skills in R, Stata, Excel, LaTex, statistics, research, data collection, data management, data analysis, article writing, eye tracking.</p>
 			</div>
 		</div>
 </body></html>
