--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			<div id="contact">
 				<p><a href="mailto:juha.pyykko@tuni.fi" target="_top">juha.pyykko@tuni.fi</a></p>
                 		<img src="j.png" alt="J" width="190">
-				<p><a href="https://www.tuni.fi/fi/juha-pyykko"><img src="tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
+				<p><a href="https://www.tuni.fi/en/juha-pyykko"><img src="tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
 				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" title="ORCiD" height="45"></a>
 				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar" title="Google Scholar" height="45"></a>
 				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" title="ResearchGate" height="45"></a></p>
