--- a/cv.html
+++ b/cv.html
@@ -162,7 +162,7 @@
 				<p>Ph.D. Student in International Health.</p>
 				<p><a href="http://urn.fi/URN:NBN:fi:uta-201408202052">M.Sc. in Statistics.</a></p>
 				<p>Working at Tampere University, Faculty of Medicine and Health Technology, Tampere, Finland.</p>
-				<p>Skills in R, Stata, Excel, LaTex, statistics, research, data collection, data management, data analysis, article writing, eye tracking.</p>
+				<p>Skills in R, Stata, Excel, LaTex, statistics, research, data collection, data management, data analysis, data visualization, article writing, eye tracking.</p>
 			</div>
 		</div>
 </body></html>
