--- a/juha.html
+++ b/juha.html
@@ -145,17 +145,17 @@
 <!-- CONTACT -->
 			<div id="contact">
 				<p><a href="mailto:juha.pyykko@tuni.fi" target="_top">juha.pyykko@tuni.fi</a></p>
-                		<img src="j.png" alt="J" width="190">
-				<p><a href="https://www.tuni.fi/en/juha-pyykko"><img src="tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
-				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="orcid.png" alt="ORCiD" title="ORCiD" height="45"></a>
-				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="google-scholar.png" alt="Google Scholar" title="Google Scholar" height="45"></a>
-				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="researchgate.png" alt="ResearchGate" title="ResearchGate" height="45"></a></p>
-				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="linkedin.png" alt="LinkedIn" title="LinkedIn" height="40"></a>
-				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
-				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=&quot;Pyykkö+J&quot;%5BAuthor%5D&sort=date"><img src="pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
-				   <a href="https://www.twitter.com/juha_pyykko"><img src="twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
-				<p style="font-size:26px"><a href="https://linktr.ee/pyykkojuha"><img src="linktree.png" alt="Linktree" title="Linktree" height="40"></a>
-				   <a href="https://github.com/pyykkojuha"><img src="github.png" alt="GitHub" title="GitHub" height="40"></a> 
+                		<img src="img/j.png" alt="J" width="190">
+				<p><a href="https://www.tuni.fi/en/juha-pyykko"><img src="logo/tuni.png" alt="Tampere University" title="Tampere University" height="43"></a></p>
+				<p><a href="https://orcid.org/0000-0001-6120-5323"><img src="logo/orcid.png" alt="ORCiD" title="ORCiD" height="45"></a>
+				   <a href="https://scholar.google.com/citations?user=ztOK53MAAAAJ"><img src="logo/google-scholar.png" alt="Google Scholar" title="Google Scholar" height="45"></a>
+				   <a href="https://www.researchgate.net/profile/Juha_Pyykkoe"><img src="logo/researchgate.png" alt="ResearchGate" title="ResearchGate" height="45"></a></p>
+				<p><a href="https://www.linkedin.com/in/juha-pyykko"><img src="logo/linkedin.png" alt="LinkedIn" title="LinkedIn" height="40"></a>
+				   <a href="https://www.scopus.com/authid/detail.uri?authorId=57190944677"><img src="logo/scopus.png" alt="Scopus" title="Scopus" height="35"></a></p>
+				<p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=&quot;Pyykkö+J&quot;%5BAuthor%5D&sort=date"><img src="logo/pubmed.png" alt="PubMed" title="PubMed" height="40"></a>
+				   <a href="https://www.twitter.com/juha_pyykko"><img src="logo/twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
+				<p style="font-size:26px"><a href="https://linktr.ee/pyykkojuha"><img src="logo/linktree.png" alt="Linktree" title="Linktree" height="40"></a>
+				   <a href="https://github.com/pyykkojuha"><img src="logo/github.png" alt="GitHub" title="GitHub" height="40"></a> 
 				   <a href="cv.html">CV</a></p>
 			</div>
 		</div>
