--- a/juha.html
+++ b/juha.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Juha Pyykkö</title>
-        <link rel="icon" type="image/x-icon" href="j.ico">
+        <link rel="icon" type="image/x-icon" href="ico/j.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Juha Pyykkö" />
 		<meta name="keywords" content="Juha Pyykkö" />
