--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -162,7 +162,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-	<h2><a href="index.html">pyyxxo.fi</a></h2>
+	<h2><a href="http://pyyxxo.fi">pyyxxo.fi</a></h2>
 	<h2><a href="https://www.twitter.com/pyyxxo">twitter.com/pyyxxo</a></h2>
 	<h2><a href="https://www.instagram.com/pyyxxo">instagram.com/pyyxxo</a></h2>
 	<h1>PYYXXO</h1>
