--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -167,7 +167,8 @@
 	<h2><a href="https://www.instagram.com/pyyxxo">instagram.com/pyyxxo</a></h2>
 	<h1>PYYXXO</h1>
 </header>
-</div>
+	<p><img src="img/TIDYDINO.png" alt="#TidyTuesday" width="30%"></p>
+	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
 </div>
 </body>
 </html>
