--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -154,7 +154,11 @@
 			header h2 {
 				font-size:0.4em;
 			}
-}
+			p {font-size:0.4em;}
+	}
+	@media screen and (max-width:760px) {
+		#contact p {font-size:0.4em;}
+	}
 </style>
 </head>
 
