--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -173,6 +173,9 @@
 </header>
 <div id="contact">
 	<p><img src="img/TIDYDINO.png" alt="#TidyTuesday" width="30%"></p>
+	<p><img src="img/TIDY_2020_44.png" alt="#TidyTuesday" width="30%">
+           <img src="img/TIDY_2020_43.png" alt="#TidyTuesday" width="30%">
+	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday" width="30%"></p>
 	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
 </div>
 </div>
