--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -172,10 +172,10 @@
 	<h1>PYYXXO</h1>
 </header>
 <div id="contact">
-	<p><img src="img/TIDYDINO.png" alt="#TidyTuesday" width="30%"></p>
-	<p><img src="img/TIDY_2020_44.png" alt="#TidyTuesday" width="30%">
-           <img src="img/TIDY_2020_43.png" alt="#TidyTuesday" width="30%">
-	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday" width="30%"></p>
+	<p><img src="img/TIDYDINO.png" alt="#TidyTuesday 2020/42" width="30%"> <img src="img/TIDY_2020_45.png" alt="#TidyTuesday 2020/45" width="30%"></p>
+	<p><img src="img/TIDY_2020_44.png" alt="#TidyTuesday 2020/44" width="30%">
+           <img src="img/TIDY_2020_43.png" alt="#TidyTuesday 2020/43" width="30%">
+	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday 2020/41" width="30%"></p>
 	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
 </div>
 </div>
