--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -177,6 +177,7 @@
 	<p><img src="img/TIDY_2020_44.png" alt="#TidyTuesday 2020/44" width="30%">
            <img src="img/TIDY_2020_43.png" alt="#TidyTuesday 2020/43" width="30%">
 	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday 2020/41" width="30%"></p>
+	<p><img src="img/PO_BULLS_R.png" alt="#TidyTuesday 2020/44" width="30%"></p>
 	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
 </div>
 </div>
