--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -179,6 +179,7 @@
 	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday 2020/41" width="30%"></p>
 	<p><img src="img/PO_BULLS_R.png" alt="#TidyTuesday 2020/44" width="30%"></p>
 	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
+	<p><a href="https://github.com/pyykkojuha/R">R_code</a></p>
 </div>
 </div>
 </body>
