--- a/pyyxxo.html
+++ b/pyyxxo.html
@@ -175,11 +175,10 @@
 	<p><img src="img/TIDYDINO.png"     alt="#TidyTuesday 2020/42" width="30%"> 
 	   <img src="img/TIDY_2020_45.png" alt="#TidyTuesday 2020/45" width="30%"></p>
 	<p><img src="img/TIDY_2020_44.png" alt="#TidyTuesday 2020/44" width="30%">
-           <img src="img/TIDY_2020_43.png" alt="#TidyTuesday 2020/43" width="30%">
+           <img src="img/TIDY_2020_43.png" alt="#TidyTuesday 2020/43" width="30%"></p>
+	<p><img src="img/PO_BULLS_R.png" alt="NBA PO" width="30%">
 	   <img src="img/TIDY_2020_41.png" alt="#TidyTuesday 2020/41" width="30%"></p>
-	<p><img src="img/PO_BULLS_R.png" alt="NBA PO" width="30%"></p>
-	<p><a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday_code</a></p>
-	<p><a href="https://github.com/pyykkojuha/R">R_code</a></p>
+	<p>Codes: <a href="https://github.com/pyykkojuha/tidytuesday">#TidyTuesday</a> * <a href="https://github.com/pyykkojuha/R">other R</a></p>
 </div>
 </div>
 </body>
