--- a/juha.html
+++ b/juha.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="Juha Pyykkö" />
                 
 <!-- FONT -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press+Start+2P|Lato">
 
 <!-- CSS -->
 	<style>
@@ -56,13 +56,11 @@
 	#main h1 {
 		font-size:2em;
 		letter-spacing:5px;
-		font-family:Times,serif;
-		}
+	}
 	#main p {
 		font-size:1em;
 		letter-spacing:1px;
-		font-family:Times,serif;
-		}
+	}
 	aside {
 		width: 35%;
 		float: right;
@@ -110,19 +108,24 @@
 		clear:both;
 		text-align:left;
 		width:100%;
+		letter-spacing:4px;
+		font-size:14px;
 		font-family: 'Lato', 'Arial';
 		}
 	#contact p {
 		padding:8px 0;
 		margin:0;
 		color:ghostwhite;
-		font-size:14px;
-		font-family: 'Lato', 'Arial';
-		letter-spacing:4px;
 		padding-left: 4px;
 		}
 	#contact p a img {
 		margin: 0 15px 0 0;
+		}
+		
+	.x{
+		font-family: 'Press Start 2P', 'Arial';
+		font-size:14px;
+		letter-spacing:6px;
 		}
 
 	/* Media Queries */
@@ -156,7 +159,8 @@
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="logo/twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
 				<p style="font-size:26px"><a href="https://linktr.ee/pyykkojuha"><img src="logo/linktree.png" alt="Linktree" title="Linktree" height="40"></a>
 				   <a href="https://github.com/pyykkojuha"><img src="logo/github.png" alt="GitHub" title="GitHub" height="40"></a> 
-				   <a href="https://pyykkojuha.github.io/cv">CV</a></p>
+				   <a href="cv.html">CV</a></p>
+				   <p class=x><a href="http://www.pyyxxo.fi">pyyxxo.fi</a></p>
 			</div>
 		</div>
 	</body>
