--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	<meta charset="utf-8" />
-	<title>P Y Y X X O</title>
+	<title>P Y Y X X O  +  Juha Pyykkö</title>
         <link rel="icon" type="image/x-icon" href="ico/P3.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="PYYXXO" />
