--- a/links.html
+++ b/links.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 
 <!-- FONT -->
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press+Start+2P|Lato">
 
 <!-- CSS -->
 <style>
@@ -146,6 +146,11 @@
 		padding-left: 4px;
 		padding-top: 4px;
 		}
+	.x{
+		font-family: 'Press Start 2P', 'Arial';
+		font-size:14px;
+		letter-spacing:6px;
+		}
 
 	/* Media Queries */
 	@media screen and (max-width:480px) {
@@ -166,6 +171,7 @@
 </header>
 <!-- CONTACT -->
 <div id="contact">
+<p class=x><a href="http://www.pyyxxo.fi">pyyxxo.fi</a></p>
 <h2>DATA VISUALIZATION WEBSITES</h2>	
 <p>+ <a href="http://satrdayjoburg.djnavarro.net/slides/#1">Danielle Navarro: Data Visualisation in R From ggplot2 to gganimat</a></p>
 <p>+ <a href="https://socviz.co/">Kieran Healy: Data Visualization: A practical introduction</a></p>
