--- a/links.html
+++ b/links.html
@@ -189,6 +189,15 @@
 	
 <h2>DATA VISUALIZATION VIDEOS</h2>	
 <p>+ <a href="https://www.youtube.com/watch?v=jbkSRLYSojo">Hans Rosling's 200 Countries, 200 Years, 4 Minutes - The Joy of Stats - BBC Four</a></p>		
+
+<h2>GITHUB FOR DATAVIZ CODE</h2>	
+<p>+ <a href="https://www.github.com/z3tt">GitHub: z3tt</a></p>
+<p>+ <a href="https://www.github.com/gkaramanis">GitHub: gkaramanis</a></p>
+<p>+ <a href="https://www.github.com/pyykkojuha">GitHub: pyykkojuha</a></p>
+	
+<h2>TWITTER FOR DATAVIZ</h2>	
+<p>+ <a href="https://www.twitter.com/r4dscommunity">Twitter: R4DScommunity</a></p>		
+
 </div>
 </div>
 </body>
