--- a/cv.html
+++ b/cv.html
@@ -231,8 +231,8 @@
 				<p>+ ANALYSIS:<br> statistical analysis, data visualization</p>
 				<p>+ RESEARCH:<br> data management, data collection, data cleaning, article writing, presentation</p>
 				<p>+ TOPICS:<br> visual attention, eye tracking, infant development, growth</p>
-				<p>+ SOFTWARE/CODE:<br> R, Stata, LaTeX, Excel, TeleForm, SPSS, HTML5</p>
-				<p>+ LANGUAGE:<br> Finnish, English, French, Swedish</p>
+				<p>+ SOFTWARE/CODE:<br> R, Stata, LaTeX, Excel, Word, TeleForm, SPSS, HTML5, FTP, MySQL</p>
+				<p>+ LANGUAGE:<br> English, suomi, français</p>
 				
 				<p></p>
 				<hr>
