--- a/cv.html
+++ b/cv.html
@@ -242,10 +242,12 @@
 				<p>+ 2012&mdash;present
 					<br>Tampere University
 					<br>RESEARCHER / STATISTICIAN / DATA MANAGER
+					<br>[Research projects on maternal and child health]
 				</p>
 				<p>+ 2018&mdash;2019
 					<br>World Health Organization
 					<br>CONSULTANT
+					<br>[Data collection reports]
 				</p>
 				
 				<p></p>
