--- a/cv.html
+++ b/cv.html
@@ -208,7 +208,6 @@
 		<div id="wrapper">
 <!-- HEADER -->
 			<header>
-				<h3><a href="juha.html"> <<< </a></h3>
 				<h3><b>CV</b></h3>
                 <h1><b>Juha Pyykkö</b></h1>
 				<h2>Data Scientist</h2>
@@ -280,7 +279,7 @@
 				
 				<p></p>
 				<hr>
-				<p></p>
+				<p><a href="juha.html"> <<< </a></p>
 	
 			</div>
 		</div>
