--- a/links.html
+++ b/links.html
@@ -188,8 +188,9 @@
 <p>+ <a href="http://tietonakyvaksi.fi/">Tieto näkyväksi</a></p>
 <p>+ <a href="https://shop.aalto.fi/p/971-data-visualization-handbook/">Data Visualization Handbook</a></p>
 	
-<h2>DATA VISUALIZATION VIDEOS</h2>	
-<p>+ <a href="https://www.youtube.com/watch?v=jbkSRLYSojo">Hans Rosling's 200 Countries, 200 Years, 4 Minutes - The Joy of Stats - BBC Four</a></p>		
+<h2>HANS ROSLING</h2>
+<p>+ <a href="https://www.youtube.com/watch?v=jbkSRLYSojo">Hans Rosling's 200 Countries, 200 Years, 4 Minutes - The Joy of Stats - BBC Four (YouTube)</a></p>
+<p>+ <a href="https://www.gapminder.org/tools">Gapminder</a></p>
 
 <h2>GITHUB FOR DATAVIZ CODE</h2>	
 <p>+ <a href="https://www.github.com/z3tt">GitHub: z3tt</a></p>
