--- a/links.html
+++ b/links.html
@@ -173,6 +173,9 @@
 </header>
 <!-- CONTACT -->
 <div id="contact">
+<h2>WHICH FIGURE TYPE TO CHOOSE?</h2>	
+<p>+ <a href="https://www.data-to-viz.com/#explore">from Data to Viz</a></p>
+	
 <h2>DATA VISUALIZATION WEB-BOOKS</h2>	
 <p>+ <a href="https://socviz.co/">Kieran Healy: Data Visualization: A practical introduction</a></p>
 <p>+ <a href="https://r4ds.had.co.nz/">Hadley Wickham & Garret Grolemund: R for Data Science</a></p>
