--- a/juha.html
+++ b/juha.html
@@ -159,7 +159,7 @@
 				   <a href="https://www.twitter.com/juha_pyykko"><img src="logo/twitter.png" alt="Twitter" title="Twitter" height="40" ></a>
 				<p style="font-size:26px"><a href="https://linktr.ee/pyykkojuha"><img src="logo/linktree.png" alt="Linktree" title="Linktree" height="40"></a>
 				   <a href="https://github.com/pyykkojuha"><img src="logo/github.png" alt="GitHub" title="GitHub" height="40"></a> 
-				   <a href="c_v.html">CV</a></p>
+				   <a href="cv.html">CV</a></p>
 				   <p class=x><a href="http://www.pyyxxo.fi">pyyxxo.fi</a></p>
 			</div>
 		</div>
