--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-	<title>Juha Pyykkö | CV</title>
+	<title>Juha Pyykkö x CV</title>
         <link rel="icon" type="image/x-icon" href="j.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Juha Pyykkö">
@@ -208,7 +208,7 @@
 		<div id="wrapper">
 <!-- HEADER -->
 			<header>
-				<h3><b>SHORT CV</b></h3>
+				<h3><b>CV</b></h3>
                 <h1><b>Juha Pyykkö</b></h1>
 				<h2>Data Scientist</h2>
 			</header>
@@ -245,7 +245,7 @@
 				</p>
 				<p>+ World Health Organization
 					<br>EXTERNAL CONSULTANT
-					<br>2/2021&mdash;6/2021 [Creating CRFs ans SOPs for a study]
+					<br>2/2021&mdash;6/2021 [Creating CRFs and SOPs for a study]
 					<br>3/2018&mdash;4/2019 [Monthly reports of the collected data for a trial]
 				</p>
 				
