--- a/cv.html
+++ b/cv.html
@@ -252,6 +252,13 @@
 				<p></p>
 				<hr>
 				<p></p>
+
+				<h2>TEACHING</h2>
+				<p>+ Statistics with SPSS for 2nd-year medical students</p>
+				
+				<p></p>
+				<hr>
+				<p></p>
 				
 				<h2>PEER-REVIEWED ARTICLES</h2>
 				<p>+ Pyykkö et al.
