--- a/dissertation.html
+++ b/dissertation.html
@@ -249,6 +249,8 @@
 				<p></p>
 							
 				<h2>LINKS:</h2>
+				<p>+ <s>Press release</s></p>
+				<p>+ <s>Abstract & thesis</s></p>
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
 				<p></p>
