--- a/vaitos.html
+++ b/vaitos.html
@@ -249,6 +249,8 @@
 				<p></p>
 				
 				<h2>LINKIT:</h2>	
+				<p>+ <s>Tiedote</s></p>
+				<p>+ <s>Tiivistelmä ja väitöskirja</s></p>	
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
 				<p></p>
