--- a/dissertation.html
+++ b/dissertation.html
@@ -233,7 +233,7 @@
 <!-- CONTACT -->
 			<div id="contact">
 				
-				<p><b>M.Sc. Juha Pyykkö's</b> dissertation on <i>Visual Attention and Early Cognitive Development in Rural Malawian Infants</i></p>			
+				<p><b>M.Sc. Juha Pyykkö's</b> doctoral dissertation titled <i>Visual Attention and Early Cognitive Development in Rural Malawian Infants</i></p>			
 				
 				<h2>TIME:</h2>	
 				<p>Friday 2022-01-14 at 12:00</p>
