--- a/vaitos.html
+++ b/vaitos.html
@@ -250,7 +250,7 @@
 				
 				<h2>LINKIT:</h2>	
 				<p>+ <s>Tiedote</s></p>
-				<p>+ <s>Tiivistelmä ja väitöskirja</s></p>	
+				<p>+ <a href="http://urn.fi/URN:ISBN:978-952-03-2213-7">Tiivistelmä ja väitöskirja</a></p>	
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
 				<p></p>
