--- a/dissertation.html
+++ b/dissertation.html
@@ -250,7 +250,7 @@
 							
 				<h2>LINKS:</h2>
 				<p>+ <s>Press release</s></p>
-				<p>+ <a href="http://urn.fi/URN:ISBN:978-952-03-2213-7">Abstract & thesis</a></p>
+				<p>+ <a href="http://urn.fi/URN:ISBN:978-952-03-2213-7">Abstract & dissertation (PDF)</a></p>
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
 				<p></p>
