--- a/dissertation.html
+++ b/dissertation.html
@@ -249,7 +249,7 @@
 				<p></p>
 							
 				<h2>LINKS:</h2>
-				<p>+ <s>Press release</s></p>
+				<p>+ <a href="https://www.tuni.fi/en/news/juha-pyykko-infant-eye-tracking-studies-are-replicable-their-predictive-value-remains-unclear">Press release</a></p>
 				<p>+ <a href="http://urn.fi/URN:ISBN:978-952-03-2213-7">Abstract & dissertation (PDF)</a></p>
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
