--- a/vaitos.html
+++ b/vaitos.html
@@ -249,7 +249,7 @@
 				<p></p>
 				
 				<h2>LINKIT:</h2>	
-				<p>+ <s>Tiedote</s></p>
+				<p>+ <a href="https://www.tuni.fi/fi/ajankohtaista/juha-pyykko-lasten-silmanliiketutkimuksista-saatiin-toistettavia-tuloksia-mutta">Tiedote</a></p>
 				<p>+ <a href="http://urn.fi/URN:ISBN:978-952-03-2213-7">Tiivistelmä ja väitöskirja (PDF)</a></p>	
 				<p>+ <a href="https://twitter.com/juha_pyykko">Twitter @juha_pyykko</a></p>
 				
