--- a/dissertation.html
+++ b/dissertation.html
@@ -239,10 +239,7 @@
 				<p>Friday 2022-01-14 at 12:00</p>
 				
 				<h2>LOCATION:</h2>
-				<p>Tampere University<br>
-					Kauppi Campus<br>
-					Arvo building, Auditorium F114<br>
-					Arvo Ylpön katu 34, Tampere, Finland</p>				
+				<p>Remote connection</p>				
 				
 				<p></p>
 				<hr>
