--- a/vaitos.html
+++ b/vaitos.html
@@ -239,10 +239,7 @@
 				<p>Perjantai 14.1.2022 klo 12</p>
 				
 				<h2>PAIKKA:</h2>
-				<p>Tampereen yliopisto<br>
-					Kaupin kampus<br>
-					Arvo-rakennus, auditorio F114<br>
-					Arvo Ylpön katu 34, Tampere, Suomi</p>
+				<p>Etäyhteys</p>
 					
 				<p></p>
 				<hr>
