--- a/dissertation.html
+++ b/dissertation.html
@@ -239,7 +239,7 @@
 				<p>Friday 2022-01-14 at 12:00</p>
 				
 				<h2>LOCATION:</h2>
-				<p>Remote connection</p>				
+				<p><a href="https://tuni.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx?folderID=8b30d331-34ff-4392-ac21-ae1300a38d3b">Remote connection</a></p>				
 				
 				<p></p>
 				<hr>
