--- a/vaitos.html
+++ b/vaitos.html
@@ -239,7 +239,7 @@
 				<p>Perjantai 14.1.2022 klo 12</p>
 				
 				<h2>PAIKKA:</h2>
-				<p>Etäyhteys</p>
+				<p><a href="https://tuni.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx?folderID=8b30d331-34ff-4392-ac21-ae1300a38d3b">Etäyhteys</a></p>	
 					
 				<p></p>
 				<hr>
