--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 <div id="wrapper">
 <div id="links">
 <br><br><br><br>
-<p><a href="https://pyykkojuha.github.io/juha"><button class="button buttonJ">Juha Pyykkö</button></a></p>
+<p><a href="https://pyyxxo.fi/juha/"><button class="button buttonJ">Juha Pyykkö</button></a></p>
 <br><br><br><br>
-<p><a href="https://pyykkojuha.github.io/pyyxxo"><button class="button buttonP">PYYXXO</button></a></p>
+<p><a href="https://pyyxxo.fi/pyyxxo/"><button class="button buttonP">PYYXXO</button></a></p>
 </div>
 </div>
 </body>
