--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		scroll;
 		}
 	body {
-		background:black;
+		background:white;
 		color:white;
 		/* display: flex; */
 		justify-content: center;
@@ -69,10 +69,8 @@
 <body>
 <div id="wrapper">
 <div id="links">
-<br><br><br><br>
-<p><a href="https://pyyxxo.fi/juha/"><button class="button buttonJ">Juha Pyykkö</button></a></p>
-<br><br><br><br>
-<p><a href="https://pyyxxo.fi/pyyxxo/"><button class="button buttonP">PYYXXO</button></a></p>
+<br><br><br><br><br><br>
+<p><a href="https://pyyxxo.fi/pyyxxo/"><button class="button buttonP">www.PYYXXO.fi</button></a></p>
 </div>
 </div>
 </body>
