--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div id="wrapper">
 <div id="links">
 <br><br><br><br><br><br>
-<p><a href="https://pyyxxo.fi/pyyxxo/"><button class="button buttonP">www.PYYXXO.fi</button></a></p>
+<p><a href="https://pyyxxo.fi/"><button class="button buttonP">www.PYYXXO.fi</button></a></p>
 </div>
 </div>
 </body>
